# ansible-role-victoriametrics_single

./: .ansible-lint  README.md  pyproject.toml
.github/workflows/: ansible-lint.yml  ansible-test.yml  release-galaxy.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  requirements.yml
molecule/default/tests/: test_default.py
tasks/: config.yml  install.yml  main.yml
templates/: promscrape.yml.j2  victoriametrics.service.j2
tests/: test.yml
vars/: main.yml
