[tool.poetry]
name = "victoriametrics-single-molecule"
version = "0.1.0"
description = "this is the package manager for molecule testing"
authors = ["msterhuj <gabin.lanore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
molecule = "^24.2.0"
molecule-plugins = {extras = ["docker"], version = "^23.5.3"}
ansible = "^9.3.0"
pytest-testinfra = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
